# new-patch-se

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  CMakeLists.txt  README.MD  toolchain.cmake
adv_player/: CMakeLists.txt  header.txt
adv_player/linker/: W700_R1CA021.ld  W800_R1BD001.ld  W810_R4EA031.ld
adv_player/src/: data.c  data.h  device.h  draw.c  draw.h  edit_tag.c  edit_tag.h  id3_parser.c  id3_parser.h  image.c  image.h  patch.c  patch.h  patch_2010.S  skin_data.c  skin_data.h  skin_list.c  skin_list.h  skin_parser.c  skin_parser.h  skin_selector.c  skin_selector.h  str_helper.c  str_helper.h  timer.c  timer.h  toplevel.c  toplevel.h  track_desc.c  track_desc.h  visualizer.c  visualizer.h
alarm_remaining_time/: CMakeLists.txt  header.txt
alarm_remaining_time/linker/: C510_R1HA035.ld  U100_R7AA076.ld  U10_R7AA071.ld
alarm_remaining_time/src/: db3210.S  db3350.S  device.h  patch.c  patch_3210.S  patch_3350.S
book_manager/: CMakeLists.txt  header.txt
book_manager/linker/: C510_R1HA035.ld  W760_R3EM001.ld  W810_R4EA031.ld
book_manager/src/: device.h  patch.c  patch.h  patch_a1.S  patch_a2.S
brightness/: CMakeLists.txt  header.txt
brightness/linker/: C510_R1HA035.ld  W760_R3EM001.ld
brightness/src/: dll.cpp  dll.h  patch.S  patch.c  patch.h
bt_transmission/: CMakeLists.txt  header.txt
bt_transmission/linker/: J108_R7EA011.ld  W760_R3EM001.ld
bt_transmission/src/: device.h  dll.cpp  dll.h  patch.S  patch.c
common/aeabi/: CMakeLists.txt  aeabi_i2f.S  aeabi_idiv.c  aeabi_idivmod.S  aeabi_udivmodsi4.c  aeabi_uidiv.c  aeabi_uidivmod.S  udivmodsi4.c
common/elf_int/: CMakeLists.txt  dll.h  dll_int.c  elf_check.c  elf_int.c  elf_int.h
common/id3/: CMakeLists.txt  id3.h  id3_cover.c  id3_header.c
common/ini/: CMakeLists.txt  ini_parser.c  ini_parser.h
common/sync/: CMakeLists.txt  async.S  sync.S  sync.h
db_itemtext/: CMakeLists.txt  header.txt
db_itemtext/linker/: C510_R1HA035.ld  J108_R7EA011.ld  W760_R3EM001.ld
db_itemtext/src/: patch.S  patch.c
db_pause/: CMakeLists.txt  header.txt
db_pause/linker/: C510_R1HA035.ld  J108_R7EA011.ld  W760_R3EM001.ld
db_pause/src/: device.h  patch.S  patch.c  patch.cpp
db_player/: CMakeLists.txt  header.txt
db_player/linker/: J108_R7EA011.ld  W760_R3EM001.ld
db_player/src/: data.c  data.h  dll.cpp  dll.h  draw.c  draw.h  editor.c  editor.h  info.c  info.h  lang.c  lang.h  lyric.c  lyric.h  patch.c  patch.h  patch_3150.S  patch_3350.S  settings.c  settings.h  str_helper.c  str_helper.h  time.c  time.h
db_redraw/: CMakeLists.txt  header.txt
db_redraw/linker/: W810_R4EA031.ld
db_redraw/src/: config_parser.c  id3_parser.c  patch.S  patch.c  patch.h
exif_info/: CMakeLists.txt  header.txt
exif_info/linker/: C510_R1HA035.ld  J108_R7EA011.ld  W760_R3EM001.ld  W810_R4EA031.ld
exif_info/src/: nanoexif.c  nanoexif.h  patch.S  patch.c  patch.h  patch_a1.S  tag_list.c  tag_list.h  tag_parser.c  tag_parser.h
flashmenu_picker/: CMakeLists.txt  header.txt
flashmenu_picker/linker/: C510_R1HA035.ld  W760_R3EM001.ld
flashmenu_picker/src/: device.h  file_list.c  file_list.h  patch.S  patch.c  patch.h
fm_record/: CMakeLists.txt  header.txt
fm_record/linker/: C510_R1HA035.ld
fm_record/src/: device.h  patch.S  patch.c
goto_shortcut/: CMakeLists.txt  header.txt
goto_shortcut/linker/: W760_R3EM001.ld  W810_R4EA031.ld
goto_shortcut/src/: editor.c  editor.h  fs_browser.c  fs_browser.h  patch.S  patch.c  patch.h  utils.c  utils.h  wstr_helper.c  wstr_helper.h
include/: addressbook.h  apps.h  base.h  bookobj.h  com.h  databrowser.h  datetime.h  dispobj.h  font.h  fsx.h  functions.h  gui.h  gui_feedback.h  gui_list.h  gui_nofmany.h  gui_oneofmany.h  gui_stringinput.h  gui_tabmenubar.h  gui_yesno.h  gvi_gc.h  imageid.h  java.h  libse.h  list.h  menu.h  misc.h  obex.h  ose.h  png.h  pngconf.h  shortcut.h  softkeys.h  soundrecorder.h  textid.h  timer.h  zconf.h  zlib.h
include/book/: ActivityMenuBook.h  AudioPlayerBook.h  BrowserItemBook.h  DataDownloadBook.h  FmRadio_Book.h  ObExReceiveBook.h  ObExSendBook.h  RightNowBook.h  SetBook.h  (+1 more)
manual_eq/: CMakeLists.txt  header.txt
manual_eq/linker/: J108_R7EA011.ld
manual_eq/src/: device.h  dll.cpp  dll.h  eq.cpp  eq.h  gui.c  gui.h  patch.S  patch.c  patch.h
mp3_info/: CMakeLists.txt  header.txt
phone_wo_sim/: CMakeLists.txt  header.txt
phone_wo_sim/linker/: C510_R1HA035.ld  U10_R7AA071.ld  U10_R7BA084.ld  W550_R4CB020.ld  W760_R3EM001.ld  W810_R4EA031.ld  W995_R1HA035.ld  Z310_R8BA024.ld  Z780_R3DA028.ld
phone_wo_sim/src/: device.h  patch.S  patch.c
phonebook_title/: CMakeLists.txt  header.txt
png_info/: CMakeLists.txt  header.txt
png_info/linker/: J108_R7EA011.ld  K600_R2BB001.ld  W760_R3EM001.ld  W810_R4EA031.ld
png_info/src/: device.h  patch.S  patch.c  patch.h  patch_a1.S
recycler/: CMakeLists.txt  header.txt
recycler/linker/: J108_R7EA011.ld
recycler/src/: patch.c  patch_3350.S
remove_scrollbar/: CMakeLists.txt  header.txt
replace_file_bt/: CMakeLists.txt  header.txt
replace_file_bt/linker/: C510_R1HA035.ld  U100_R7AA076.ld  U10_R7AA071.ld  W760_R3EM001.ld
replace_file_bt/src/: db3350.S  device.h  patch.S  patch.c  patch_3150.S  patch_3210.S  patch_3350.S
shutdown_menu/: CMakeLists.txt  header.txt
shutdown_menu/linker/: J108_R7EA011.ld  J10_R7CA065.ld  J20_R7CA064.ld  U100_R7AA076.ld  U10_R7AA071.ld  U10_R7BA084.ld  W20_R7DA062.ld
shutdown_menu/src/: device.h  patch.S  patch.c
sleepmode/: CMakeLists.txt  header.txt
sleepmode/linker/: C510_R1HA035.ld  J108_R7EA011.ld  K600_R2BB001.ld  W760_R3EM001.ld  W810_R4EA031.ld
sleepmode/src/: dll.cpp  dll.h  patch.c  patch.h  patch_3150.S  patch_3210.S  patch_3350.S  patch_a1.S
volume_redraw/: CMakeLists.txt  header.txt
volume_redraw/linker/: C510_R1HA035.ld  W760_R3EM001.ld  W810_R4EA031.ld
volume_redraw/src/: device.h  dll.cpp  dll.h  patch.S  patch.c  patch.h
volume_slider/: CMakeLists.txt  header.txt
volume_slider/linker/: J108_R7EA011.ld
volume_slider/src/: dll.cpp  dll.h  patch.S  patch.c  patch.h  slider.c  slider.h
(+43 files in other folders)
